syntax = "proto3";

message CipherText {
  bytes nonce = 1;
  bytes ciphertext = 2;
  bytes authn_tag = 3;
}
